Deprecated: Use static valueOf instead of new.
This includes Boolean, Char, Short, Integer, Long, Character, Byte, etc.